# Projet_API

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
Projet_API-niama/: streamlit_app.py
Projet_API-niama/app/: scraper.py
api/: .gitignore  README.md
api/app/: __init__.py  econometrics.py  main.py  prices.py  scraper_http.py  sentiment.py
app/: main.py  prices.py  scraper.py  sentiment.py  utils.py
app/scrapers/: __init__.py  http_scraper.py
data/clean/: reddit_clean.jsonl
data/raw/: reddit_bitcoinmarkets_btc_etf.jsonl  reddit_btc_sub.jsonl  reddit_cc_btc_eth.jsonl  reddit_cc_btc_extended.jsonl  reddit_cc_defi.jsonl  reddit_cm_btc_eth.jsonl  reddit_cryptotech_defi.jsonl  reddit_ethtrader_eth.jsonl  reddit_http.jsonl
notebooks/: getting_started.ipynb
scripts/: normalize_reddit.py  run_reddit_batch.py  scrape_reddit.py  scrape_reddit_http.py  selenium_helpers.py
templates/: compare.html  index.html
