[tool.poetry]
name = "crypto-sentiment-api"
version = "0.1.0"
description = "API d'analyse de sentiment crypto avec webscraping Reddit et FinBERT"
authors = ["MoSEF Student"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
selenium = "^4.16.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.1.0"
webdriver-manager = "^4.0.1"
transformers = "^4.37.0"
torch = "^2.1.0"
requests = "^2.31.0"
jinja2 = "^3.1.3"
pandas = "^2.2.0"
python-multipart = "^0.0.6"
statsmodels = "^0.14.1"
scipy = "^1.12.0"
matplotlib = "^3.8.0"
pandas-stubs = "~=2.3.3"
streamlit = "^1.52.2"
plotly = "^6.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
